[tool.poetry]
name = "olympus-impact-factor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
subgrounds = "^0.0.9"
ipykernel = "^6.13.0"
etherscan-python = "^2.1.0"
pandas = "^1.4.2"
pycoingecko = "^2.2.0"
web3 = "^5.29.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
